09_arquivo_binario/Arq_bin_05/Resultados/Raony/completo/result_compilation.txt
Resultados/Raony/completo/estabelecimento.c:16:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘*’ token
   16 | tEstabelecimento *CriaEstabelecimento();
      |                  ^
cc1: fatal error: Resultados/Raony/completo/main.c: No such file or directory
compilation terminated.
Resultados/Raony/completo/produto.c: In function ‘LeProduto’:
Resultados/Raony/completo/produto.c:36:19: warning: implicit declaration of function ‘stlens’; did you mean ‘strlen’? [-Wimplicit-function-declaration]
   36 |     fread(&name, (stlens(name)+1) * sizeof(name), 1, arquivo);
      |                   ^~~~~~
      |                   strlen
